--- a/index.html
+++ b/index.html
@@ -10,87 +10,89 @@
   <div class="container">
     <div class="container" id="title">
       <h1 class="text-center">
- Javascript calculator
- </h1>
+       Javascript calculator
+   </h1>
+</div>
+
+<div class="container" id="display">
+  <div class="row">
+    <div id="print" class="col-xs-12 text-right calcs">
+
     </div>
-
-    <div class="container" id="display">
-      <div class="row">
-        <div id="print" class="col-xs-12 text-right calcs">
-
-        </div>
-      </div>
-    </div>
+</div>
+</div>
 
 
-    <div class="container" id="buttonbox">
-      <div class="row">
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go('ac');">AC</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go('log');">log</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go('sin');">sin</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go('tan');">tan</button>
-      </div>
-      <div class="row">
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(7);">7</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(8);">8</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(9);">9</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(' * ');">*</button>
-      </div>
-      <div class="row">
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(4);">4</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(5);">5</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(6);">6</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(' - ');">-</button>
-      </div>
-      <div class="row">
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(1);">1</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(2);">2</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(3);">3</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(' + ');">+</button>
-      </div>
-      <div class="row">
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(0);">0</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go('.');">.</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go('eval');">=</button>
-        <button class="btn btn-lg btn-default col-xs-3" onClick="go(' / ');">/</button>
-      </div>
-    </div>
-  </div>
+<div class="container" id="buttonbox">
+  <div class="row">
+    <button class=" btn btn-lg btn-danger col-xs-6" id="deleteall">AC</button>
+    <button class="btn btn-lg btn-danger col-xs-3" id="deleteone">DEL</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="/">÷</button>
+</div>
+<br>
+<div class="row">
+    <button class="btn btn-lg btn-primary col-xs-3" id="7">7</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="8">8</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="9">9</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="*">X</button>
+</div>
+<br>
+<div class="row">
+    <button class="btn btn-lg btn-primary col-xs-3" id="4">4</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="5">5</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="6">6</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="-">-</button>
+</div>
+<br>
+<div class="row">
+    <button class="btn btn-lg btn-primary col-xs-3" id="1">1</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="2">2</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="3">3</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id="+">+</button>
+</div>
+<br>
+<div class="row">
+    <button class="btn btn-lg btn-primary col-xs-3" id="0">0</button>
+    <button class="btn btn-lg btn-primary col-xs-3" id=".">.</button>
+    <button class="btn btn-lg btn-success col-xs-6" id="total">=</button>
+
+</div>
+</div>
+</div>
 
 
 <!-- footer -->
 
 <div class="container-fluid col-md-12  text-center footer" id="contact">
 
-        <H1> By AKhil <i class="fa fa-smile-o"></i>
-</H1>
-  <div id ="midicons ">
-         <a href="https://www.facebook.com/profile.php?id=100008378649084"target="_blank"<i class="fa fa-facebook-official fa-2x"></i>
-</a>
+    <H1> By AKhil <i class="fa fa-smile-o"></i>
+    </H1>
+    <div id ="midicons ">
+       <a href="https://www.facebook.com/profile.php?id=100008378649084"target="_blank"<i class="fa fa-facebook-official fa-2x"></i>
+       </a>
 
-  <a href="https://github.com/akhil451" target="blank" <i class ="fa fa-github-square fa-2x"></i>
+       <a href="https://github.com/akhil451" target="blank" <i class ="fa fa-github-square fa-2x"></i>
 
-</a>
+       </a>
 
-<a href="https://www.linkedin.com/in/akhil-prasannan-b704a4102" target="blank" <i class ="fa fa-linkedin-square fa-2x"></i>
+       <a href="https://www.linkedin.com/in/akhil-prasannan-b704a4102" target="blank" <i class ="fa fa-linkedin-square fa-2x"></i>
 
-</a>
+       </a>
 
-<a href="" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-<a href="https://github.com/akhil451/jscalc" target="blank"><i class="fa fa-code " id="code">Project Code</i></a>
-</div>
+       <a href="" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+       <a href="https://github.com/akhil451/jscalc" target="blank"><i class="fa fa-code " id="code">Project Code</i></a>
+   </div>
 
-  <!-- end footer-->
+   <!-- end footer-->
 
 
-<!-- script-->
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous">
+   <!-- script-->
+   <script
+   src="https://code.jquery.com/jquery-3.1.1.js"
+   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+   crossorigin="anonymous"></script>
 
-  </script>
-<script type="text/javascript" src="myscripts.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   <script type="text/javascript" src="myscripts.js"></script>
+   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
